[package]
name         = "relative-age-display"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/relative-age-display"
description  = "Human-readable relative-age display: an elapsed span rendered as its single most-significant unit with two decimals."
publish      = false

[lib]
name = "relative_age_display"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
