[package]
name         = "relative-age-display"
version      = "0.2.1"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/relative-age-display"
description  = "Human-readable relative-age display: an elapsed span rendered as its single most-significant unit with two decimals."
publish      = false

[lib]
name = "relative_age_display"
path = "src/lib.rs"

[dependencies]
# Immutable Nota 0.9 presentation codec; legacy Nota 0.5 wire traits do not
# enter this crate's public human-presentation surface.
nota = { git = "https://github.com/LiGoldragon/nota.git", rev = "89dc3c85a9ff96d4e4d53accfd867df672cae5a8" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
